--- a/index.html
+++ b/index.html
@@ -325,11 +325,11 @@
     <div class="container">
         <div class="header">
             <div class="logos">
-                <img src="C:\Users\Julio\Downloads\imagenes\download.png" alt="Logo UAT">
+                <img src="download.png" alt="Logo UAT">
             </div>
             <h1>🧪 Sistema de Gestión de Reactivos Químicos - FCQ UAT</h1>
             <div class="logos">
-                <img src="C:\Users\Julio\Downloads\imagenes\download.jpeg" alt="Logo FCQ UAT">
+                <img src="download.jpeg" alt="Logo FCQ UAT">
             </div>
         </div>
         
