--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
     <div class="container">
         <div class="header">
             <div class="logos">
-                <img src="download.png" alt="Logo UAT">
+                <img src="UAT-Logotipo-2024-Color" alt="Logo UAT">
             </div>
             <h1>🧪 Sistema de Gestión de Reactivos Químicos - FCQ UAT</h1>
             <div class="logos">
